--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
           <video id="video" autoplay muted loop plays-inline>
-                    <source src="Confetti Loop no Alpha - Enchanted Media.mp4" type="video/mp4">
+                    <source src="./Confetti Loop no Alpha - Enchanted Media.mp4" type="video/mp4">
                     </source>
           </video>
 <div class="game">
